[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MainCam.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Mouse.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Reader.gd" type="Script" id=3]
[ext_resource path="res://Visuals/Comic and Manga Publisher Design-01.png" type="Texture" id=4]
[ext_resource path="res://Visuals/Paper-01.png" type="Texture" id=5]
[ext_resource path="res://Visuals/icon.png" type="Texture" id=6]

[sub_resource type="Theme" id=1]

[node name="Reader" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="CenterContainer"]
current = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer"]
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper" type="TextureRect" parent="CenterContainer/CenterContainer"]
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/CenterContainer"]
margin_left = -110.0
margin_top = -50.0
margin_right = 110.0
margin_bottom = 50.0
theme = SubResource( 1 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageLeft" type="TextureRect" parent="CenterContainer/CenterContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtLeft" type="Button" parent="CenterContainer/CenterContainer/HBoxContainer/PageLeft"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 99.0
margin_bottom = 98.0
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageRight" type="TextureRect" parent="CenterContainer/CenterContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtRight" type="Button" parent="CenterContainer/CenterContainer/HBoxContainer/PageRight"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 99.0
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Mouse"]
modulate = Color( 1, 1, 1, 0.705882 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[connection signal="pressed" from="CenterContainer/CenterContainer/HBoxContainer/PageLeft/ButtLeft" to="." method="_on_ButtLeft_pressed"]
[connection signal="pressed" from="CenterContainer/CenterContainer/HBoxContainer/PageRight/ButtRight" to="." method="_on_ButtRight_pressed"]
